# NCursesGame

./: CMakeLists.txt  Main.c  Math.c  Utils.c  build.sh  run.sh
